--- a/assignment2/about/index.html
+++ b/assignment2/about/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>The Big Picture - Start Bootstrap Template</title>
+    <title>About Jason Sinn</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +30,7 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" href="#">Jason Sinn</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -49,7 +49,7 @@
                         <a href="#">About</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="#">Portfolio</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
@@ -65,9 +65,15 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <h1>The Big Picture</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, iusto, unde, sunt incidunt id sapiente rerum soluta voluptate harum veniam fuga odit ea pariatur vel eaque sint sequi tenetur eligendi.</p>
+                <h1>Jason Sinn</h1>
+                <p>Jason, the owner of the park, grew up loving the outdoors – fishing, kayaking, mountain biking and camping. He spent much of his childhood wandering the woods of the vast Poconos in Pennsylvania. 
+
+After a career as a decorated aviator and veteran of the Iraq and Afghanistan wars, Jason chose Texas as his home, and got himself an RV. He created Calhoun’s to provide families, outdoorsmen and campers with a friendly, laidback RV retreat.</p>
             </div>
+        </div>
+        <!-- added this reference codepen Fade in Background Image-->
+        <div class="background-image background-image.visible">
+            
         </div>
         <!-- /.row -->
     </div>
