--- a/assignment1/portfolio.html
+++ b/assignment1/portfolio.html
@@ -12,6 +12,10 @@
 
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+	<meta charset="utf-8">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body>
