--- a/assignment1/portfolio.html
+++ b/assignment1/portfolio.html
@@ -39,21 +39,21 @@
 
 	<div>
 
-		<section>
+		<section class=".bodyDiv">
 
 			<header class="contentHead">
 				Portfolio
 			</header>
 			<table class="portTable">
 				<tr>
-						<td>
+						<td class="tableData">
 							<a href=""><img class="imgPort" src="http://lorempixel.com/150/150/nightlife">
 							<p class="bannerPort">
 							RPG Game
 							</p>
 							</a>
 						</td>
-						<td>
+						<td class="tableData">
 							<a href=""><img class="imgPort" src="http://lorempixel.com/150/150/technics">
 							<p class="bannerPort">
 							Hangman
@@ -63,14 +63,14 @@
 					
 				</tr>
 				<tr>
-						<td>
+						<td class="tableData">
 							<a href=""><img class="imgPort" src="http://lorempixel.com/150/150/transport">
 							<p class="bannerPort">
 							Rutgers Info Widget
 							</p>
 							</a>
 						</td>
-						<td>
+						<td class="tableData">
 							<a href=""><img class="imgPort" src="http://lorempixel.com/150/150/people">
 							<p class="bannerPort">
 							Trivia Game
@@ -79,7 +79,7 @@
 						</td>
 				</tr>
 				<tr>
-					<td>
+					<td class="tableData">
 							<a href=""><img class="imgPort" src="http://lorempixel.com/150/150/city">
 							<p class="bannerPort">
 							Rock Paper Scissors
@@ -94,8 +94,9 @@
 
 		<aside>
 				<table class="connectTable">
+				<tbody>
 				<tr>
-					<th 
+					<th class="socialTH" 
 					colspan="3"> Connect With Me
 					</th>
 				</tr>
@@ -107,13 +108,13 @@
 						<td>
 							<a class="socialLink" href="https://www.linkedin.com/in/jasonsinn1"><img class ="social" src="assets/images/linkedin.png"/></a><!-- linkedIn link -->
 						</td>
-						<td>
+						<td class="socialTD">
 							<a class="socialLink" href="http://stackoverflow.com"><img class="social" src="assets/images/stackoverflow.png"/></a><!-- stackOverflow link -->
 						</td>
 					</tr>
 				
 				</table>
-			
+			</tbody>
 
 		</aside>
 
