--- a/assignment2/about/index.html
+++ b/assignment2/about/index.html
@@ -40,19 +40,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Jason Sinn</a>
+                <a class="navbar-brand" href="index.hmtl">Jason Sinn</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav nav-float">
                     <li>
-                        <a href="#">About</a>
+                        <a href="index.hmtl">About</a>
                     </li>
                     <li>
-                        <a href="#">Portfolio</a>
+                        <a href="../portfolio/portfolio.html">Portfolio</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="../contact/contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -71,10 +71,21 @@
 After a career as a decorated aviator and veteran of the Iraq and Afghanistan wars, Jason chose Texas as his home, and got himself an RV. He created Calhoun’s to provide families, outdoorsmen and campers with a friendly, laidback RV retreat.</p>
             </div>
         </div>
+
+    <!-- Footer -->
+        <footer class="navbar-fixed-bottom">
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; Jason Sinn 2016</p>
+                </div>
+            </div>
+            <!-- /.row -->
+        </footer>
+
         <!-- added this reference codepen Fade in Background Image-->
-        <div class="background-image background-image.visible">
+        <!--<div class="background-image">
             
-        </div>
+        </div>-->
         <!-- /.row -->
     </div>
     <!-- /.container -->
