--- a/assignment1/portfolio.html
+++ b/assignment1/portfolio.html
@@ -27,11 +27,11 @@
 
 			<li class="name"><a class="nameLink" href = "index.html">Jason Sinn</a></li>
 
-			<li ><a class="navLink" href="index.html">About</a></li> 
+			<li class="li" ><a class="navLink" href="index.html">About</a></li> 
 			
-			<li ><a class="navLink" href="portfolio.html">Portfolio</a></li>
+			<li><a class="navLink navLink2" href="portfolio.html">Portfolio</a></li>
 		
-			<li ><a class="navLink" href="contact.html">Contact</a></li>
+			<li ><a class="navLink navLink3" href="contact.html">Contact</a></li>
 
 		</ul>
 
@@ -48,7 +48,7 @@
 				<tr>
 						<td class="tableData">
 							<a href=""><img class="imgPort" src="http://lorempixel.com/150/150/nightlife">
-							<p class="bannerPort">
+							<p class="bannerPort overlap">
 							RPG Game
 							</p>
 							</a>
@@ -65,7 +65,7 @@
 				<tr>
 						<td class="tableData">
 							<a href=""><img class="imgPort" src="http://lorempixel.com/150/150/transport">
-							<p class="bannerPort">
+							<p class="bannerPort overlap">
 							Rutgers Info Widget
 							</p>
 							</a>
