two down one more

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -8,6 +8,10 @@
 
 	</title>
 
+	<meta charset="utf-8">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -24,11 +28,11 @@
 
 			<li class="name"><a class="nameLink" href = "index.html">Jason Sinn</a></li>
 
-			<li ><a class="navLink" href="index.html">About</a></li> 
+			<li class="li"><a class="navLink" href="index.html">About</a></li> 
 			
-			<li ><a class="navLink" href="portfolio.html">Portfolio</a></li>
+			<li ><a class="navLink navLink2" href="portfolio.html">Portfolio</a></li>
 		
-			<li ><a class="navLink" href="contact.html">Contact</a></li>
+			<li ><a class="navLink navLink3" href="contact.html">Contact</a></li>
 
 		</ul>
 
@@ -44,7 +48,7 @@
 
 			<p class="aboutPara">
 
-				<img src="assets/images/jason.jpg"/> 
+				<img class="about980px aboutImg980px" src="assets/images/jason.jpg"/> 
 
 				Jason, the owner of the park, grew up loving the outdoors – fishing, kayaking, mountain biking and camping. He spent much of his childhood wandering the woods of the vast Poconos in Pennsylvania. 
 
@@ -58,7 +62,7 @@ After a career as a decorated aviator and veteran of the Iraq and Afghanistan wa
 
 				<table class="connectTable">
 				<tr class="tableBorder">
-					<th 
+					<th class="socialTH" 
 					colspan="3"> Connect With Me
 					</th>
 				</tr>
@@ -70,7 +74,7 @@ After a career as a decorated aviator and veteran of the Iraq and Afghanistan wa
 						<td>
 							<a class="socialLink" href="https://www.linkedin.com/in/jasonsinn1"><img class ="social" src="assets/images/linkedin.png"/></a><!-- linkedIn link -->
 						</td>
-						<td>
+						<td class="socialTD">
 							<a class="socialLink" href="http://stackoverflow.com"><img class="social" src="assets/images/stackoverflow.png"/></a><!-- stackOverflow link -->
 						</td>
 					</tr>
