--- a/assignment1/contact.html
+++ b/assignment1/contact.html
@@ -8,6 +8,10 @@
 
 	</title>
 
+	<meta charset="utf-8">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -23,11 +27,11 @@
 
 			<li class="name"><a class="nameLink" href = "index.html">Jason Sinn</a></li>
 
-			<li ><a class="navLink" href="index.html">About</a></li> 
+			<li class="li"><a class="navLink" href="index.html">About</a></li> 
 			
-			<li ><a class="navLink" href="portfolio.html">Portfolio</a></li>
+			<li ><a class="navLink navLink2" href="portfolio.html">Portfolio</a></li>
 		
-			<li ><a class="navLink" href="contact.html">Contact</a></li>
+			<li ><a class="navLink navLink3" href="contact.html">Contact</a></li>
 
 		</ul>
 
@@ -77,8 +81,8 @@
 		<aside>
 
 				<table class="connectTable">
-				<tr>
-					<th 
+				<tr class="tableBorder">
+					<th class="socialTH" 
 					colspan="3"> Connect With Me
 					</th>
 				</tr>
@@ -90,7 +94,7 @@
 						<td>
 							<a class="socialLink" href="https://www.linkedin.com/in/jasonsinn1"><img class ="social" src="assets/images/linkedin.png"/></a><!-- linkedIn link -->
 						</td>
-						<td>
+						<td class="socialTD">
 							<a class="socialLink" href="http://stackoverflow.com"><img class="social" src="assets/images/stackoverflow.png"/></a><!-- stackOverflow link -->
 						</td>
 					</tr>
