--- a/assignment1/contact.html
+++ b/assignment1/contact.html
@@ -45,34 +45,30 @@
 				Contact
 			</header>
 
-			<form action="MAILTO:jrs341@me.com" method="post" enctype="text/plain">
+			<form class="formArea" action="MAILTO:jrs341@me.com" method="post" enctype="text/plain">
 
 				<p class="form">
 					Name
 				</p>
 
-				<input type = "text" name = "Name" size= "67"> 
+				<input class="input" type = "text" name = "Name"> 
 
 					<p class="form">
 					E-mail
 					</p>
 
-				<input type="text" name="email" size="67">
+				<input class="input" type="text" name="email" size="67">
 					<p class="form">
 					Message
 					</p>
 
-				<textarea name="message" cols="65" rows="10">
+				<textarea class="input" name="message" cols="65" rows="10">
 					
 				</textarea>
 
 				<input class="submit" type="submit" value="Send">
 
 				<input class="submit" type="reset" value="Reset">
-
-				<!--<a class="submit" href="mailto: jrs341@me.com">Submit</a>-->
-
-				<!--<input class="submit" type="submit" name="Submit">-->
 
 			</form>
 						
