--- a/assignment2.2/index.html
+++ b/assignment2.2/index.html
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navFont navbar-brand" href="index.html">Jason Sinn</a>
+                <a class="navBackgroundColor navFont navbar-brand" href="index.html">Jason Sinn</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
